NIHVIVO-2280: Fixed layout issues for "* required fields" text in IE 6 and 7

--- a/themes/wilma/css/ie6.css
+++ b/themes/wilma/css/ie6.css
@@ -234,3 +234,6 @@ table#account th {
     margin-left: 5px;
     float: right;
 }
+p.requiredHint {
+    clear: left;
+}
